tests/baselines/reference/commentsOnJSXExpressionsArePreserved(jsx=react-jsx,module=commonjs,moduledetection=legacy).errors.txt
commentsOnJSXExpressionsArePreserved.tsx(5,16): error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.


==== commentsOnJSXExpressionsArePreserved.tsx (1 errors) ====
    // file is intentionally not a module - this tests for a crash in the module/system transforms alongside the `react-jsx` and `react-jsxdev` outputs
    namespace JSX {}
    class Component {
        render() {
            return <div>
                   ~~~~~
                {/* missing */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                {null/* preserved */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                {
    ~~~~~~~~~~~~~
                    // ??? 1
    ~~~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
                { // ??? 2
    ~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
                {// ??? 3
    ~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
                {
    ~~~~~~~~~~~~~
                    // ??? 4
    ~~~~~~~~~~~~~~~~~~~~~~~~
                /* ??? 5 */}
    ~~~~~~~~~~~~~~~~~~~~~~~~
            </div>;
    ~~~~~~~~~~~~~~
!!! error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
        }
    }